Fix spacing issue in  home page

--- a/src/styles/home-column.css
+++ b/src/styles/home-column.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   color: #666666;
-  padding-top: 12rem;
+  padding-top: 10%;
   line-height: 1.6rem;
   justify-content: space-between;
   align-items: center;
